fix letter spacing in description suggestions

--- a/app/client/stylesheets/_application.scss
+++ b/app/client/stylesheets/_application.scss
@@ -1,5 +1,6 @@
 #application {
-  #school .title {
+  #school .title,
+  #description .title {
     text-align: left;
     text-transform: none;
     letter-spacing: 0;
